--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
     <title>G2 Labs | Great Ideas, Greater Solutions</title>
     <link rel="icon" href="/g2l-v2/assets/favicon-Byq9yqwk.png" type="image/png">
+    <link href="https://fonts.cdnfonts.com/css/aquire" rel="stylesheet">
 <!--    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">-->
 <!--    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">-->
 <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/lucide/0.263.1/lucide.min.js"></script>-->
