--- a/index.html
+++ b/index.html
@@ -31,17 +31,7 @@
 
     <title>G2 Labs | Great Ideas, Greater Solutions</title>
     <link rel="icon" href="./src/assets/images/favicon.png" type="image/png">
-<!--    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">-->
-<!--    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/lucide/0.263.1/lucide.min.js"></script>-->
-<!--    <link href="https://fonts.cdnfonts.com/css/aquire" rel="stylesheet">-->
-
-<!--    &lt;!&ndash; Bootstrap Icons &ndash;&gt;-->
-<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">-->
-<!--    <link href="assets/css/styles.css" rel="stylesheet">-->
-
-<!--    &lt;!&ndash; SweetAlert2 CSS &ndash;&gt;-->
-<!--    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">-->
+    <link href="https://fonts.cdnfonts.com/css/aquire" rel="stylesheet">
 
   </head>
   <body>
